# pyge

./: LICENSE  README.md  environment.yml  justfile  pyproject.toml
src/cli/: __init__.py  agurk.py  plonk.py
src/pyge/: __init__.py  context.py  coor4d.py  coordinateset.py  coordinatetuple.py  crs.py  documentation.py  ellipsoid.py  minimal.py  operation.py  operator.py  operator_method.py  referenceframe.py  registeritem.py  units.py
src/pyge/builtin_operator_methods/: __init__.py  addone.py  cart.py  conventions.py  helmert.py  pipeline.py  tmerc.py
tests/: test_context.py  test_coordinateset.py  test_coordinatetuple.py  test_crs.py  test_documentation.py  test_ellipsoid.py  test_operation.py  test_operator.py  test_referenceframe.py  test_registeritem.py
