# pyproject.toml
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
#
# pip install -e .

[build-system]
requires = ['setuptools>=61.0']
build-backend = 'setuptools.build_meta'

[project]
name = "pyge"
requires-python = ">= 3.10"
description = "PYthon GEodesy"
version = "2024.11.12"
dependencies = ["black>=22.6", "pytest"]
authors = [ {name = "Thomas Knudsen", email = "thokn@kds.dk"} ]
maintainers = [ {name = "Thomas Knudsen", email = "thokn@kds.dk"} ]
readme = "README.md"
keywords = ["geodesy", "geoscience"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License"
]

# https://setuptools.pypa.io/en/stable/userguide/entry_point.html
[project.scripts]
plonk = "cli:plonk"
plink = "cli:plink"
agurk = "cli:agurk"

# https://stackoverflow.com/a/49033954/618276
# https://docs.pytest.org/en/stable/getting-started.html
[tool.pytest.ini_options]
pythonpath = ["."]
